--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -26,5 +26,14 @@ pipeline {
                 sh './jenkins/scripts/deliver.sh'
             }
         }
+        
+
+        stage('Deliver') {
+            steps {
+                sh './jenkins/scripts/deliver.sh'
+            }
+        }
+
+
     }
 }
